# recipe-ai-meal-planner

./: .gitignore  README.md
agent_runtime_harness/: README.md  pyproject.toml
agent_runtime_harness/examples/visual_fixtures/: README.md  chicken_rice_bowl_demo.vision.json  fixture_manifest.json  verify_visual_fixtures.py
agent_runtime_harness/src/agent_runtime_harness/: __init__.py  agents.py  analytics.py  cli.py  evals.py  models.py  runtime.py  store.py  tools.py  vision.py
agent_runtime_harness/tests/: test_planning_behavior.py  test_visual_fixture_smoke.py
memory_rag_lab/: README.md  pyproject.toml
memory_rag_lab/data/memories/: eval_default.json  eval_recipe_default.json
memory_rag_lab/examples/: agent_runtime.md  memory_notes.md  multimodal_annotations.json  multimodal_menu_cards.md  retrieval_trace.md
memory_rag_lab/examples/images/: salmon_tray_dinner.vision.json  yogurt_oats_breakfast.vision.json
memory_rag_lab/examples/visual_fixtures/: README.md  fixture_manifest.json  salmon_plate_demo.vision.json  verify_visual_fixtures.py
memory_rag_lab/src/memory_rag_lab/: __init__.py  analytics.py  answering.py  chunking.py  cli.py  documents.py  evals.py  index.py  llm.py  memory.py  rerank.py  retrieval.py  service.py  vision.py
memory_rag_lab/tests/: test_visual_fixture_smoke.py
recipe_studio_web/: README.md  __init__.py  __main__.py  server.py  tests.py
recipe_studio_web/static/: app.css  app.js
recipe_studio_web/templates/: index.html
