[project]
name = "agent-runtime-harness"
version = "0.1.0"
description = "Minimal agent runtime with tool registry, trace logging, checkpointing, reviewer loop, and evals."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
